# grpo-gui

./: .gitignore  README.md  claude_eval.py  evaluator.py  flower_dataset.py  image_classifier.py  lint.sh  llms.py  main.py  plotter.py  pyproject.toml  rldatasets.py  run.sh  run_image_classification.py  utils.py
evaluator/: __init__.py  base_evaluator.py  clock.py  correlation.py  gui.py  orchestrator.py
rldatasets/: __init__.py  base_loader.py
rldatasets/clock/: clock_generator.py  dataloader.py
rldatasets/correlation/: correlation_generator.py  dataloader.py
rldatasets/gui/: dataloader.py  gui_generator.py
rldatasets/real_gui/: __init__.py  dataloader.py  gui_dataset.py
tests/rldatasets/: __init__.py
tests/rldatasets/real_gui/: __init__.py  test_gui_generator.py  test_gui_loader.py
training/: loss.py
utils/: __init__.py  pdf_logger.py  plotter.py
