[project]
name = "deepseekrl-extended"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "anthropic>=0.51.0",
    "datasets>=3.6.0",
    "matplotlib>=3.10.3",
    "psutil>=7.0.0",
    "qwen-vl-utils>=0.0.11",
    "reportlab>=4.4.1",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
